--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -14,6 +14,7 @@
 		<a href="/astro-tutorial/">Home</a>
     <a href="/astro-tutorial/about/">About</a>
     <a href="/astro-tutorial/blog/">Blog</a>
-		<h1>My Astro Site</h1>
+		<h1>Blog</h1>
+    <p>This will be empty for some time :(</p>
 	</body>
 </html>
