--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -15,6 +15,11 @@
     <a href="/astro-tutorial/about/">About</a>
     <a href="/astro-tutorial/blog/">Blog</a>
 		<h1>Blog</h1>
-    <p>This will be empty for some time :(</p>
+    <p>This is where I will post about my journey learning Astro.</p>
+    <ul>
+      <li><a href="/astro-tutorial/blog/post-1/">Post 1</a></li>
+      <li><a href="/astro-tutorial/blog/post-2/">Post 2</a></li>
+      <li><a href="/astro-tutorial/blog/post-3/">Post 3</a></li>
+    </ul>
 	</body>
 </html>
