--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,4 +1,6 @@
 ---
+import '../../styles/global.css';
+
 const pageTitle = "Blog";
 ---
 
@@ -11,9 +13,11 @@ const pageTitle = "Blog";
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<a href="/astro-tutorial/">Home</a>
-    <a href="/astro-tutorial/about/">About</a>
-    <a href="/astro-tutorial/blog/">Blog</a>
+		<nav class="navbar">
+			<a href="/astro-tutorial/">Home</a>
+			<a href="/astro-tutorial/about/">About</a>
+			<a href="/astro-tutorial/blog/" class="active">Blog</a>
+		</nav>
 		<h1>{pageTitle}</h1>
     <p>This is where I will post about my journey learning Astro.</p>
     <ul>
