--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,4 +1,5 @@
 ---
+import Navbar from '../../components/Navbar.astro';
 import '../../styles/global.css';
 
 const pageTitle = "Blog";
@@ -13,11 +14,7 @@ const pageTitle = "Blog";
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<nav class="navbar">
-			<a href="/astro-tutorial/">Home</a>
-			<a href="/astro-tutorial/about/">About</a>
-			<a href="/astro-tutorial/blog/" class="active">Blog</a>
-		</nav>
+		<Navbar activeItem="blog"></Navbar>
 		<h1>{pageTitle}</h1>
     <p>This is where I will post about my journey learning Astro.</p>
     <ul>
