--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Navbar from '../components/Navbar.astro';
 import '../styles/global.css';
 
 const pageTitle = "Home";
@@ -13,11 +14,7 @@ const pageTitle = "Home";
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<nav class="navbar">
-			<a href="/astro-tutorial/" class="active">Home</a>
-			<a href="/astro-tutorial/about/">About</a>
-			<a href="/astro-tutorial/blog/">Blog</a>
-		</nav>
+		<Navbar activeItem="home"></Navbar>
 		<h1>{pageTitle}</h1>
 	</body>
 </html>
