--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,5 +1,6 @@
 ---
-import Navbar from '../../components/Navbar.astro';
+import Header from '../../components/Header.astro';
+import Footer from '../../components/Footer.astro';
 import '../../styles/global.css';
 
 const pageTitle = "Blog";
@@ -14,7 +15,7 @@ const pageTitle = "Blog";
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<Navbar activeItem="blog"></Navbar>
+		<Header activeItem="blog"></Header>
 		<h1>{pageTitle}</h1>
     <p>This is where I will post about my journey learning Astro.</p>
     <ul>
@@ -22,5 +23,9 @@ const pageTitle = "Blog";
       <li><a href="/astro-tutorial/blog/post-2/">Post 2</a></li>
       <li><a href="/astro-tutorial/blog/post-3/">Post 3</a></li>
     </ul>
+		<Footer></Footer>
+		<script>
+			import '../../scripts/menu.js';
+		</script>
 	</body>
 </html>
