--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,6 @@
 ---
-import Navbar from '../components/Navbar.astro';
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 
 const pageTitle = "About Me";
@@ -39,7 +40,7 @@ const skills = ["test automation", "robotic process automation"];
 		</style>
 	</head>
 	<body>
-		<Navbar activeItem="about"></Navbar>
+		<Header activeItem="about"></Header>
 		<h1>{pageTitle}</h1>
     <p>Here are a few facts about me:</p>
 		<ul>
@@ -53,5 +54,9 @@ const skills = ["test automation", "robotic process automation"];
 		<ul>
 			{skills.map((skill) => <li class="skill">{skill}</li>)}
 		</ul>
+		<Footer></Footer>
+		<script>
+			import '../scripts/menu.js';
+		</script>
 	</body>
 </html>
