--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,5 @@
 ---
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import '../styles/global.css';
+import BaseLayout from '../layouts/BaseLayout.astro';
 
 const pageTitle = "About Me";
 
@@ -15,48 +13,33 @@ const identity = {
 const skills = ["test automation", "robotic process automation"];
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/astro-tutorial/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-		<style>
-			.skill {
-				width: fit-content;
-				background-color: var(--primary-color);
-				color: var(--dark-color);
-				font-weight: bold;
-				list-style: none;
-				padding: 2px 8px;
-				border-radius: 16px;
-				display: inline-block;
-			}
-			.skill:not(:last-child) {
-				margin-right: 8px;
-				margin-bottom: 8px;
-			}
-		</style>
-	</head>
-	<body>
-		<Header activeItem="about"></Header>
-		<h1>{pageTitle}</h1>
-    <p>Here are a few facts about me:</p>
-		<ul>
-			<li>My name is {identity.firstName}.</li>
-			<li>I live in {identity.country} and I work as a {identity.occupation}.</li>
-			{identity.hobbies.length >= 1 &&
-				<li>One of my favorite hobbies is: {identity.hobbies[Math.floor(Math.random() * identity.hobbies.length)]}.</li>
-			}
-		</ul>
-    <p>My skills are:</p>
-		<ul>
-			{skills.map((skill) => <li class="skill">{skill}</li>)}
-		</ul>
-		<Footer></Footer>
-		<script>
-			import '../scripts/menu.js';
-		</script>
-	</body>
-</html>
+<style>
+	.skill {
+		width: fit-content;
+		background-color: var(--primary-color);
+		color: var(--dark-color);
+		font-weight: bold;
+		list-style: none;
+		padding: 2px 8px;
+		border-radius: 16px;
+		display: inline-block;
+	}
+	.skill:not(:last-child) {
+		margin-right: 8px;
+		margin-bottom: 8px;
+	}
+</style>
+<BaseLayout pageTitle={pageTitle} activeItem="about">
+	<p>Here are a few facts about me:</p>
+	<ul>
+		<li>My name is {identity.firstName}.</li>
+		<li>I live in {identity.country} and I work as a {identity.occupation}.</li>
+		{identity.hobbies.length >= 1 &&
+			<li>One of my favorite hobbies is: {identity.hobbies[Math.floor(Math.random() * identity.hobbies.length)]}.</li>
+		}
+	</ul>
+	<p>My skills are:</p>
+	<ul>
+		{skills.map((skill) => <li class="skill">{skill}</li>)}
+	</ul>
+</BaseLayout>
