--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -24,9 +24,12 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   margin: 1rem 0;
-  font-size: 2.5rem;
-  color: var(--primary-color);
   text-transform: capitalize;
+}
+
+h1 {
+  color: var(--primary-color);
+  font-size: 2.5rem;
 }
 
 a:link, a:visited, a:hover, a:active {
