--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,14 +1,14 @@
 ---
 import BaseLayout from '../../layouts/BaseLayout.astro';
+import BlogPost from '../../components/BlogPost.astro';
 
 const pageTitle = "Blog";
+const allPosts = Object.values(import.meta.glob('./*.md', { eager: true }));
 ---
 
 <BaseLayout pageTitle={pageTitle} activeItem="blog">
 	<p>This is where I will post about my journey learning Astro.</p>
 	<ul>
-		<li><a href="/astro-tutorial/blog/post-1/">Post 1</a></li>
-		<li><a href="/astro-tutorial/blog/post-2/">Post 2</a></li>
-		<li><a href="/astro-tutorial/blog/post-3/">Post 3</a></li>
+		{allPosts.map((post: any) => <BlogPost url={post.url} title={post.frontmatter.title}></BlogPost>)}
 	</ul>
 </BaseLayout>
