--- a/src/pages/blog/tags/index.astro
+++ b/src/pages/blog/tags/index.astro
@@ -8,5 +8,7 @@ const uniqueTags = [...new Set(allPosts.map((post: any) => post.frontmatter.tags
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <div>{uniqueTags.map((tag) => <p><a href={`/astro-tutorial/blog/tags/${tag}`}>{tag}</a></p>)}</div>
+  <ul>
+    {uniqueTags.map((tag) => <li><a href={`/astro-tutorial/blog/tags/${tag}`}>{tag}</a></li>)}
+  </ul>
 </BaseLayout>
