--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,11 +1,22 @@
 ---
 import Menu from './Menu.astro';
 import Navbar from './Navbar.astro';
+import ThemeIcon from './ThemeIcon.astro';
 
 const { activeItem } = Astro.props;
 ---
 
 <header>
-  <Menu></Menu>
+  <div>
+    <ThemeIcon />
+    <Menu />
+  </div>
   <Navbar activeItem={activeItem}></Navbar>
 </header>
+
+<style>
+  div {
+    display: flex;
+    justify-content: space-between;
+  }
+</style>
