update: migrate post pages to collection

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,14 +1,15 @@
 ---
+import { getCollection } from 'astro:content';
 import BaseLayout from '../../layouts/BaseLayout.astro';
 import BlogPost from '../../components/BlogPost.astro';
 
 const pageTitle = "Blog";
-const allPosts = Object.values(import.meta.glob('./*.md', { eager: true }));
+const allPosts = await getCollection('posts');
 ---
 
 <BaseLayout pageTitle={pageTitle} activeItem="blog">
 	<p>This is where I will post about my journey learning Astro.</p>
 	<ul>
-		{allPosts.map((post: any) => <BlogPost url={post.url} title={post.frontmatter.title}></BlogPost>)}
+		{allPosts.map((post) => <BlogPost url={`/astro-tutorial/blog/${post.id}`} title={post.data.title}></BlogPost>)}
 	</ul>
 </BaseLayout>
