--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -5,7 +5,7 @@ const { frontmatter } = Astro.props;
 ---
 
 <BaseLayout pageTitle={frontmatter.title} activeItem="blog">
-  <p>Written by {frontmatter.author} on {frontmatter.pubDate.toString().slice(0, 10)}.</p>
+  <p>Written by {frontmatter.author} on {frontmatter.pubDate.toLocaleDateString()}.</p>
   <p><em>{frontmatter.description}</em></p>
   <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt}>
   <div class="tags">{frontmatter.tags.map((tag: string) => <p class="tag"><a href={`/astro-tutorial/blog/tags/${tag}`}>{tag}</a></p>)}</div>
