--- a/src/pages/blog/tags/[tag].astro
+++ b/src/pages/blog/tags/[tag].astro
@@ -1,14 +1,15 @@
 ---
+import { getCollection } from 'astro:content';
 import BaseLayout from '../../../layouts/BaseLayout.astro';
 import BlogPost from '../../../components/BlogPost.astro';
 
 export async function getStaticPaths () {
-  const allPosts = Object.values(import.meta.glob('../*.md', { eager: true }));
+  const allPosts = await getCollection('posts');
 
-  const uniqueTags = [...new Set(allPosts.map((post: any) => post.frontmatter.tags).flat())];
+  const uniqueTags = [...new Set(allPosts.map((post) => post.data.tags).flat())];
 
   return uniqueTags.map((tag) => {
-    const filteredPosts = allPosts.filter((post: any) => post.frontmatter.tags.includes(tag));
+    const filteredPosts = allPosts.filter((post) => post.data.tags.includes(tag));
     return {
       params: { tag },
       props: { posts: filteredPosts },
@@ -22,6 +23,6 @@ const { posts } = Astro.props;
 <BaseLayout pageTitle={tag}>
   <p>Posts tagged with {tag}</p>
   <ul>
-    {posts.map((post: any) => <BlogPost url={post.url} title={post.frontmatter.title}></BlogPost>)}
+    {posts.map((post) => <BlogPost url={`/astro-tutorial/blog/${post.id}`} title={post.data.title}></BlogPost>)}
   </ul>
 </BaseLayout>
