--- a/src/pages/blog/tags/index.astro
+++ b/src/pages/blog/tags/index.astro
@@ -1,10 +1,11 @@
 ---
+import { getCollection } from 'astro:content';
 import BaseLayout from '../../../layouts/BaseLayout.astro';
 
 const pageTitle = "Tag Index";
 
-const allPosts = Object.values(import.meta.glob('../*.md', { eager: true }));
-const uniqueTags = [...new Set(allPosts.map((post: any) => post.frontmatter.tags).flat())];
+const allPosts = await getCollection('posts');
+const uniqueTags = [...new Set(allPosts.map((post) => post.data.tags).flat())];
 ---
 
 <BaseLayout pageTitle={pageTitle}>
